<resources>
    <string name="enter_city">Enter city name</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="updated_time_format">Updated: %s</string>
    <string name="app_name">ClimateSense</string>
    <string name="app_logo">App Logo</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="location_icon">Location Icon</string>
    <string name="default_location">Phagwara Rural District, Punjab</string>
    <string name="change_location">Change Location</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="updated_time">Updated 10 min ago</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="humidity">Humidity</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="wind">Wind</string>
    <string name="rainfall_icon">Rainfall Icon</string>
    <string name="rainfall_today">Rainfall Today</string>
    <string name="soil_moisture_icon">Soil Moisture Icon</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="five_day_forecast">5-Day Forecast</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="farming_recommendations">Farming Recommendations</string>
    <string name="irrigation_icon">Irrigation Icon</string>
    <string name="irrigation_advice">Irrigation Advice</string>
    <string name="irrigation_recommendation">Based on soil moisture levels and expected rainfall, light irrigation is recommended in the next 48 hours.</string>
    <string name="planting_icon">Planting Icon</string>
    <string name="planting_advice">Planting Advice</string>
    <string name="planting_recommendation">Favorable conditions for planting maize and leafy vegetables are expected next week.</string>
    <string name="view_all_recommendations">View All Recommendations</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="weather_alert_text">Heavy rainfall expected on April 12–13. Consider harvesting mature crops.</string>
    <string name="home">Home</string>
    <string name="forecast">Forecast</string>
    <string name="crops">Crops</string>
    <string name="insights">Insights</string>
    <string name="profile">Profile</string>
    <string name="no_alerts">Alerts will appear here.</string>
    <string name="weather_alerts">Weather Alerts </string>
    <string name="add_manual_reading">Add Manual Reading</string>

</resources>